Updated turtle with link

--- a/Python_by_Example__Learning_to_Pro.ipynb
+++ b/Python_by_Example__Learning_to_Pro.ipynb
@@ -3388,6 +3388,180 @@
     "\n",
     "</div>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "631350cd-7ea4-4728-bd24-b967b5fea02e",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#0f172a; padding:20px; border-radius:12px; text-align:center;\">\n",
+    "    <h1 style=\"color:#38bdf8; margin-bottom:10px;\">Part 07</h1>\n",
+    "    <h3 style=\"color:yellow; font-weight:400;\">Turtle</h3>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36831680-18dc-4522-ba0a-2affd33b58dd",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Easy</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>060.</strong> Draw a square using Python graphics or turtle.\n",
+    "    </p>\n",
+    "    <a href=\"https://github.com/cyberfantics/cs-fundamentals-with-python/blob/main/Turtle/60.py\" target=\"_blank\" style=\"color:#38bdf8; text-decoration:none;\">\n",
+    "         Solution\n",
+    "    </a>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82d9a451-2168-4ab1-9ffb-e479cb243546",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Easy</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>061.</strong> Draw a triangle using Python graphics or turtle.\n",
+    "    </p>\n",
+    "  <a href=\"https://github.com/cyberfantics/cs-fundamentals-with-python/blob/main/Turtle/61.py\" target=\"_blank\" style=\"color:#38bdf8; text-decoration:none;\">\n",
+    "         Solution\n",
+    "    </a>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3477380-ce48-43af-91c2-0533aa9bb0a9",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Easy</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>062.</strong> Draw a circle using Python graphics or turtle.\n",
+    "    </p>\n",
+    "  <a href=\"https://github.com/cyberfantics/cs-fundamentals-with-python/blob/main/Turtle/62.py\" target=\"_blank\" style=\"color:#38bdf8; text-decoration:none;\">\n",
+    "         Solution\n",
+    "    </a>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f1b6472-9411-40ec-aca4-ab19030478e1",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Medium</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>063.</strong> Draw three squares in a row with a gap between each. \n",
+    "        Fill each square with a different colour.\n",
+    "    </p>\n",
+    "              <a href=\"https://github.com/cyberfantics/cs-fundamentals-with-python/blob/main/Turtle/63.py\" target=\"_blank\" style=\"color:#38bdf8; text-decoration:none;\">\n",
+    "         Solution\n",
+    "    </a>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81952099-3305-477b-ad82-6231658808ef",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Medium</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>064.</strong> Draw a five-pointed star using Python graphics or turtle.\n",
+    "    </p>\n",
+    "  <a href=\"https://github.com/cyberfantics/cs-fundamentals-with-python/blob/main/Turtle/64.py\" target=\"_blank\" style=\"color:#38bdf8; text-decoration:none;\">\n",
+    "         Solution\n",
+    "    </a>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0451021a-176b-4d3d-82ae-08b8af70fcc9",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\">\n",
+    "        <strong>Difficulty:</strong> Medium\n",
+    "    </p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>065.</strong> Write the numbers in a vertical sequence, starting at the bottom with number 1.\n",
+    "    </p>\n",
+    "    <a href=\"https://github.com/cyberfantics/cs-fundamentals-with-python/blob/main/Turtle/65.py\"\n",
+    "       target=\"_blank\"\n",
+    "       style=\"color:#38bdf8; text-decoration:none;\">\n",
+    "        Solution\n",
+    "    </a>\n",
+    "        <img src=\"resources/65.png\" width=\"300px\" height=\"200px\" align='center' />\n",
+    "\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99464449-4cd5-4337-87c5-a199d4d2b64f",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Medium–Hard</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>066.</strong> Draw an octagon using Python graphics or turtle. \n",
+    "        Use a different colour for each side, randomly selected from a list of six colours.\n",
+    "    </p>\n",
+    "              <a href=\"https://github.com/cyberfantics/cs-fundamentals-with-python/blob/main/Turtle/66.py\" target=\"_blank\" style=\"color:#38bdf8; text-decoration:none;\">\n",
+    "         Solution\n",
+    "    </a>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ca7d2ac-25e8-4b6f-8e60-9dfa59a56753",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Hard</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>067.</strong> Create a specific pattern using Python graphics or turtle.\n",
+    "    </p>\n",
+    "    <a href=\"https://github.com/cyberfantics/cs-fundamentals-with-python/blob/main/Turtle/67.py\"\n",
+    "       target=\"_blank\"\n",
+    "       style=\"color:#38bdf8; text-decoration:none;\">\n",
+    "        Solution\n",
+    "    </a>\n",
+    "        <img src=\"resources/67.png\" width=\"300px\" height=\"300px\" align='center' />\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3075deea-8de1-495e-9f4a-ed912b98b604",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Hard</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>068.</strong> Draw a pattern that changes each time the program runs. \n",
+    "        Use random functions to pick the number of lines, the length of each line, and the angle of each turn.\n",
+    "    </p>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d244aae-afab-4af3-9396-f5a78d3d0121",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:black; padding:14px; border-radius:10px; text-align:center; border:5px solid green;\">\n",
+    "\n",
+    "</div>"
+   ]
   }
  ],
  "metadata": {
