Added method of string

--- a/Python_by_Example__Learning_to_Pro.ipynb
+++ b/Python_by_Example__Learning_to_Pro.ipynb
@@ -4268,6 +4268,475 @@
     "\n",
     "</div>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b789b4b1-9821-4d9e-ab6b-6cb9bff17e71",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#0f172a; padding:20px; border-radius:12px; text-align:center;\">\n",
+    "    <h1 style=\"color:#38bdf8; margin-bottom:10px;\">Part 08</h1>\n",
+    "    <h2 style=\"color:yellow; font-weight:400;\">More String Manipulation</h2>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4124edc-84e0-45af-9ce2-642c4a1ae4da",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Easy</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>080.</strong> Ask the user to enter their first name and display the length of the first name.\n",
+    "        Then ask for their surname and display the length of the surname.\n",
+    "        Join the first name and surname with a space and display the full name.\n",
+    "        Finally, display the total length of the full name, including the space.\n",
+    "    </p>\n",
+    "</div>\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "7b2948e3-3243-4f1c-9376-04d45dff78cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your first name  Mansoor\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The length of your name is 7\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your sur name  Bukhari\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The length of your surname is 7\n",
+      "Your name is Mansoor Bukhari, with length of name which is 15\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input(\"Enter your first name \")\n",
+    "print(f\"The length of your name is {len(name)}\")\n",
+    "\n",
+    "sur_name = input(\"Enter your sur name \")\n",
+    "print(f'The length of your surname is {len(sur_name)}')\n",
+    "\n",
+    "name = name + ' ' + sur_name\n",
+    "\n",
+    "print(f'Your name is {name}, with length of name which is {len(name)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb6ffa1b-e2b2-48be-b6d8-143ea39d1e99",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Easy</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>081.</strong> Ask the user to enter their favourite school subject.\n",
+    "        Display the subject with a hyphen (<code>-</code>) after each letter\n",
+    "        (for example: S-p-a-n-i-s-h-).\n",
+    "    </p>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "62167873-9f94-4954-82be-c0b28254269e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your favt subject  Mathematics\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "M-a-t-h-e-m-a-t-i-c-s-"
+     ]
+    }
+   ],
+   "source": [
+    "subject = input(\"Enter your favt subject \")\n",
+    "\n",
+    "for char in subject:\n",
+    "    print(char, end='-')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a743673f-b3b8-4f12-83db-c3f165f6eb6c",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Medium</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>082.</strong> Display a line of text from your favourite poem.\n",
+    "        Ask the user for a starting position and an ending position.\n",
+    "        Display only the characters that fall between those two positions.\n",
+    "    </p>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "54336018-1f74-4542-a8ff-62cc41db616e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hmain tum sa muhabat ha agr Iman ko tum chaho\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter start position for sub string  3\n",
+      "Enter end position for sub string  10\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "in tum \n"
+     ]
+    }
+   ],
+   "source": [
+    "line = 'Hmain tum sa muhabat ha agr Iman ko tum chaho'\n",
+    "\n",
+    "print(line)\n",
+    "\n",
+    "strt = int(input(\"Enter start position for sub string \"))\n",
+    "end_p = int(input(\"Enter end position for sub string \"))\n",
+    "\n",
+    "print(line[strt:end_p])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c3eaad1-8201-4075-a7b0-48c3b67a7998",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Medium</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>083.</strong> Ask the user to type a word in uppercase.\n",
+    "        If they enter the word in lowercase or mixed case, ask them to try again.\n",
+    "        Keep repeating until the input is entirely in uppercase.\n",
+    "    </p>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "55ca441b-8037-4359-b06e-d5170435953a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter word in uppercase  mansoor\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Try Again\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter word in uppercase  Mansor\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Try Again\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter word in uppercase  MANSOOR\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best of Luck\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    word = input(\"Enter word in uppercase \")\n",
+    "    if not word.isupper():\n",
+    "        print(\"Try Again\")\n",
+    "    else:\n",
+    "        print(\"Best of Luck\")\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43d94e16-9008-4b7c-8a68-c34ddfff2139",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Easy</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>084.</strong> Ask the user to enter their postcode.\n",
+    "        Display the first two letters of the postcode in uppercase.\n",
+    "    </p>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "acbbfa15-c87f-4cad-b631-248ea54b0cce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your post code  ACKG\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AC\n"
+     ]
+    }
+   ],
+   "source": [
+    "postcode = input(\"Enter your post code \")\n",
+    "print(postcode.upper()[:2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8cc7fefa-2f6a-421e-a5c3-268780edec75",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Medium</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>085.</strong> Ask the user to enter their name.\n",
+    "        Count how many vowels are in the name and display the total.\n",
+    "    </p>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "d289fdc2-4705-4257-a312-23a763040076",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your name  Syed Mansoor ul Hassan Bukhari\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total vowel in your name is 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input(\"Enter your name \")\n",
+    "vowels = 0\n",
+    "\n",
+    "for char in name:\n",
+    "    if char.lower() in ['a', 'e', 'i', 'o', 'u']:\n",
+    "        vowels += 1\n",
+    "print(f'Total vowel in your name is {vowels}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ab01fbe-bc5f-44b7-9046-b08b2e3b7aec",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Medium–Hard</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>086.</strong> Ask the user to enter a new password and then ask them to enter it again.\n",
+    "        If both passwords match exactly, display “Thank you”.\n",
+    "        If the letters match but the case is different, display “They must be in the same case”.\n",
+    "        Otherwise, display “Incorrect”.\n",
+    "    </p>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "44112533-fc3e-4f7d-abdf-bb172e6d0cd1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter password  medium\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Must be in same case\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter password  mdium\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Incorrect, Try Again\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter password  Medium\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Thank You\n"
+     ]
+    }
+   ],
+   "source": [
+    "password = 'Medium'\n",
+    "while True:\n",
+    "    n_pass = input(\"Enter password \")\n",
+    "    if password == n_pass:\n",
+    "        print(\"Thank You\")\n",
+    "        break\n",
+    "    elif password.lower() == n_pass.lower():\n",
+    "        print(\"Must be in same case\")\n",
+    "    else:\n",
+    "        print(\"Incorrect, Try Again\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "939b93ae-ff84-4b12-8066-1c0d290379d4",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Medium–Hard</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>087.</strong> Ask the user to enter a word.\n",
+    "        Display the word backwards, showing one character per line.\n",
+    "    </p>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "dcb8fa26-8d22-4583-8448-4933dde4d3f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a word  Salfi\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i\n",
+      "f\n",
+      "l\n",
+      "a\n",
+      "S\n"
+     ]
+    }
+   ],
+   "source": [
+    "word = input('Enter a word ')\n",
+    "\n",
+    "length = len(word)\n",
+    "\n",
+    "for i in range(length, 0, -1):\n",
+    "    print(word[i-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1979e68-37e5-481a-9d7a-01a70ed77fa2",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:black; padding:14px; border-radius:10px; text-align:center; border:5px solid green;\">\n",
+    "\n",
+    "</div>"
+   ]
   }
  ],
  "metadata": {
