Added python array

--- a/Python_by_Example__Learning_to_Pro.ipynb
+++ b/Python_by_Example__Learning_to_Pro.ipynb
@@ -4737,6 +4737,580 @@
     "\n",
     "</div>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "988f26fa-e77f-4ab7-9782-6cc7f2f35fe2",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#0f172a; padding:20px; border-radius:12px; text-align:center;\">\n",
+    "    <h1 style=\"color:#38bdf8; margin-bottom:10px;\">Part 09</h1>\n",
+    "    <h2 style=\"color:yellow; font-weight:400;\">Numeric Arrays</h2>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3362d40-0c6b-465f-938a-2bfc612b8ee6",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Easy</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>088.</strong> Ask the user to enter five integers.\n",
+    "        Store them in an array.\n",
+    "        Sort the array and then display the numbers in reverse order.\n",
+    "    </p>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "84d985df-0aad-4492-b9d0-e4bf2e103e03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from array import *\n",
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "e6c9b512-71d9-4f4c-a479-75c25bd75689",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter five integer  34\n",
+      "Enter five integer  56\n",
+      "Enter five integer  12\n",
+      "Enter five integer  14\n",
+      "Enter five integer  65\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12, 14, 34, 56, 65]\n",
+      "Array in reverse are [65, 56, 34, 14, 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = array('i', [])\n",
+    "for i in range(5):\n",
+    "    value = int(input(\"Enter five integer \"))\n",
+    "    arr.append(value)\n",
+    "\n",
+    "arr = sorted(arr)\n",
+    "print(arr)\n",
+    "\n",
+    "arr.reverse()\n",
+    "\n",
+    "print(f'Array in reverse are {arr}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2fac7cf9-9e99-4a94-9c9d-a0d0e062b952",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Easy</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>089.</strong> Create an empty array to store integers.\n",
+    "        Generate five random numbers and add them to the array.\n",
+    "        Display each number on a separate line.\n",
+    "    </p>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "b35e6444-3a9c-414b-adff-2ad449c42245",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "701\n",
+      "953\n",
+      "858\n",
+      "221\n",
+      "648\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = array('i',[])\n",
+    "for _ in range(5):\n",
+    "    arr.append(random.randint(1,1000))\n",
+    "\n",
+    "\n",
+    "for a in arr:\n",
+    "    print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4e3d3f3-d796-49a3-a74a-2d36ec9b7bb4",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Medium</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>090.</strong> Ask the user to enter numbers.\n",
+    "        If the number is between 10 and 20 (inclusive), store it in an array.\n",
+    "        Otherwise, display the message “Outside the range”.\n",
+    "        Once five valid numbers have been added, display “Thank you”\n",
+    "        and show each number in the array on a separate line.\n",
+    "    </p>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "984ec875-20f2-42f4-a538-2d160ae09731",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter any number  10\n",
+      "Enter any number  11\n",
+      "Enter any number  12\n",
+      "Enter any number  43\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Out of range\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter any number  3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Out of range\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter any number  13\n",
+      "Enter any number  14\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Thank You.\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = array('i',)\n",
+    "cnt = 0\n",
+    "while cnt < 5:\n",
+    "    num = int(input(\"Enter any number \"))\n",
+    "    if num >= 10 and num <= 20:\n",
+    "        arr.append(num)\n",
+    "        cnt += 1\n",
+    "    else:\n",
+    "        print(\"Out of range\")\n",
+    "\n",
+    "print(\"Thank You.\")\n",
+    "for a in arr:\n",
+    "    print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e0405e6-f434-4b63-b0be-01442f0e436e",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Easy–Medium</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>091.</strong> Create an array containing five numbers,\n",
+    "        where at least two numbers appear more than once.\n",
+    "        Display the array to the user.\n",
+    "        Ask them to enter one of the numbers from the array\n",
+    "        and then display how many times that number appears.\n",
+    "    </p>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "b9563ac8-8c2a-4da7-8e7d-0c5ef0eee908",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array('i', [23, 12, 23, 1, 45, 75, 45, 20])\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter number from list  23\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23 appears 2 times in list\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = array('i', [23,12,23,1,45,75,45,20])\n",
+    "\n",
+    "print(arr)\n",
+    "ask = int(input(\"Enter number from list \"))\n",
+    "\n",
+    "print(f'{ask} appears {arr.count(ask)} times in list')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1db47822-24d8-4389-a325-1e0ff1997e76",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Medium</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>092.</strong> Create two arrays:\n",
+    "        one containing three numbers entered by the user,\n",
+    "        and another containing five random numbers.\n",
+    "        Combine both arrays into one large array.\n",
+    "        Sort the combined array and display each number on a separate line.\n",
+    "    </p>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "2f41aef9-c424-409e-bbf9-d25a8c9442c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a number  3\n",
+      "Enter a number  4\n",
+      "Enter a number  5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here is extented array\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "28\n",
+      "131\n",
+      "189\n",
+      "194\n",
+      "287\n"
+     ]
+    }
+   ],
+   "source": [
+    "u_arr = array('i', [int(input(\"Enter a number \")) for _ in range(3)])\n",
+    "r_arr = array('i', [random.randint(1,300) for _ in range(5)])\n",
+    "\n",
+    "u_arr.extend(r_arr)\n",
+    "\n",
+    "n_arr = sorted(u_arr)\n",
+    "\n",
+    "print('Here is extented array')\n",
+    "for char in n_arr:\n",
+    "    print(char)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44ed6532-7bd0-4892-880c-70791b22c8f2",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Medium</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>093.</strong> Ask the user to enter five numbers and store them in an array.\n",
+    "        Sort the array and display it.\n",
+    "        Ask the user to choose one of the numbers.\n",
+    "        Remove that number from the original array and store it in a new array.\n",
+    "    </p>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "398bc968-14b1-44dc-b606-0a74e049da03",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a number  56\n",
+      "Enter a number  345\n",
+      "Enter a number  35\n",
+      "Enter a number  76\n",
+      "Enter a number  23\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array('i', [23, 35, 56, 76, 345])\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Chose a number  345\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Previous Array array('i', [23, 35, 56, 76]), \n",
+      "New Array array('i', [345])\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_nbr = array('i', [int(input('Enter a number ')) for _ in range(5)])\n",
+    "user_nbr = array('i', sorted(user_nbr))\n",
+    "print(user_nbr)\n",
+    "\n",
+    "chose = int(input(\"Chose a number \"))\n",
+    "\n",
+    "if chose in user_nbr:\n",
+    "    user_nbr.remove(chose)\n",
+    "    new_arr = array('i', [chose])\n",
+    "else:\n",
+    "    new_arr = array('i')\n",
+    "    print(\"Number not found!\")\n",
+    "\n",
+    "print(f'Previous Array {user_nbr}, \\nNew Array {new_arr}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c555a82-ba91-40c8-81ad-7312583767ac",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Medium–Hard</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>094.</strong> Display an array of five numbers.\n",
+    "        Ask the user to select one of the numbers.\n",
+    "        If the number exists in the array, display its position.\n",
+    "        If it does not exist, ask the user to try again until a valid number is chosen.\n",
+    "    </p>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "cf6c27fd-6a2c-4f03-8b0f-a362be9e5de9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array('i', [34, 65, 23, 46, 12])\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Select number:  0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not Found. try Again\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Select number:  1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not Found. try Again\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Select number:  23\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23 is present in position 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = array('i', [34, 65, 23, 46, 12])\n",
+    "\n",
+    "print(arr)\n",
+    "\n",
+    "while True:\n",
+    "    select = int(input(\"Select number: \"))\n",
+    "    if select in arr:\n",
+    "        print(f'{select} is present in position {arr.index(select) + 1}')\n",
+    "        break\n",
+    "    else:\n",
+    "        print(\"Not Found. try Again\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f22176c-9baf-4788-b4cc-a9215d8817b2",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Hard</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>095.</strong> Create an array of five numbers between 10 and 100,\n",
+    "        each with two decimal places.\n",
+    "        Ask the user to enter a whole number between 2 and 5.\n",
+    "        If the number is outside this range, display an error message\n",
+    "        and keep asking until a valid number is entered.\n",
+    "        Divide each number in the array by the user’s number\n",
+    "        and display the results rounded to two decimal places.\n",
+    "    </p>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "6524634c-7dd1-4185-b07d-18266aa05167",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[34.45, 6.55, 2.13, 3.46, 34.12]\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter number between 2 to 5:  7\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter in range. Try Again\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter number between 2 to 5:  4\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8.61, 1.64, 0.53, 0.87, 8.53]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = array('f', [34.45, 6.55, 2.13, 3.46, 34.12])\n",
+    "new_a = array('f')\n",
+    "\n",
+    "print([round(x, 2) for x in arr])\n",
+    "\n",
+    "while True:\n",
+    "    num = int(input(\"Enter number between 2 to 5: \"))\n",
+    "    if 2 <= num <= 5:\n",
+    "        for a in arr:\n",
+    "            new_a.append(round(a / num, 2))\n",
+    "        break\n",
+    "    else:\n",
+    "        print(\"Enter in range. Try Again\")\n",
+    "\n",
+    "print([round(x, 2) for x in new_a])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5276985-7e15-44e7-ad4f-bc9885de73e5",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:black; padding:14px; border-radius:10px; text-align:center; border:5px solid green;\">\n",
+    "\n",
+    "</div>"
+   ]
   }
  ],
  "metadata": {
